AddIngredients class and xml modified by Rudolph

--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Directions"
-        android:enabled="false"
+        android:textAllCaps="false"
         app:backgroundTint="#F675A1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +196,7 @@
         android:layout_width="197dp"
         android:layout_height="38dp"
         android:text="Add Both Ingredients"
-        android:enabled="false"
+        android:textAllCaps="false"
         android:textSize="12sp"
         app:backgroundTint="#9C27B0"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -210,7 +210,7 @@
         android:layout_width="241dp"
         android:layout_height="35dp"
         android:text="Add Additional Ingredient"
-        android:enabled="false"
+        android:textAllCaps="false"
         android:textSize="12sp"
         app:backgroundTint="#FFC107"
         app:layout_constraintBottom_toBottomOf="parent"
