--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -207,17 +207,18 @@
 
     <Button
         android:id="@+id/addAdditionalIngredientButton"
-        android:layout_width="241dp"
-        android:layout_height="35dp"
+        android:layout_width="252dp"
+        android:layout_height="49dp"
         android:text="Add Additional Ingredient"
         android:textAllCaps="false"
         android:textSize="12sp"
         app:backgroundTint="#FFC107"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
+        app:layout_constraintVertical_bias="0.85" />
 
     <TextView
         android:id="@+id/textView12"
