--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddIngredients">
+    tools:context=".AddIngredients"
+    android:id="@+id/ingredientsID">
+
 
     <EditText
         android:id="@+id/editTextValueOfAdditionalIngredient"
