resized button in edit profile page

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -214,16 +214,15 @@
 
     <Button
         android:id="@+id/change_text_box_button"
-        android:layout_width="74dp"
-        android:layout_height="43dp"
+        android:layout_width="63dp"
+        android:layout_height="42dp"
         android:text="save"
-        android:textSize="15sp"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.956" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
