Added character limit to ingredient name and directions, and added a progress dialog to log in by Rudolph Garcia

--- a/app/src/main/res/layout/activity_add_directions.xml
+++ b/app/src/main/res/layout/activity_add_directions.xml
@@ -96,6 +96,7 @@
         android:ems="10"
         android:hint="Add Direction"
         android:inputType="textPersonName"
+        android:maxLength="500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.449"
@@ -110,6 +111,7 @@
         android:ems="10"
         android:hint="Add Direction"
         android:inputType="textPersonName"
+        android:maxLength="500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.449"
@@ -124,6 +126,7 @@
         android:ems="10"
         android:hint="Add Direction"
         android:inputType="textPersonName"
+        android:maxLength="500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.449"
