--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -81,6 +81,7 @@
         android:hint="Ingredient Name"
         android:inputType="textPersonName"
         android:textSize="12sp"
+        android:maxLength="50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.234"
@@ -147,6 +148,7 @@
         android:hint="Ingredient Name"
         android:inputType="textPersonName"
         android:textSize="12sp"
+        android:maxLength="50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.234"
@@ -186,6 +188,7 @@
         android:hint="Ingredient Name"
         android:inputType="textPersonName"
         android:textSize="12sp"
+        android:maxLength="50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.234"
