--- a/app/src/main/res/layout/profile_posts.xml
+++ b/app/src/main/res/layout/profile_posts.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="50sp"
+            android:gravity="center"
+            android:textSize="44sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -54,14 +55,6 @@
                 android:layout_width="101dp"
                 android:layout_height="wrap_content"
                 android:text="Tag"
-                android:textColor="@color/black"
-                android:textSize="25sp" />
-
-            <TextView
-                android:id="@+id/profileRecipeTagContinue"
-                android:layout_width="101dp"
-                android:layout_height="wrap_content"
-                android:text=" ..."
                 android:textColor="@color/black"
                 android:textSize="25sp" />
 
