--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/socialgrublogohorizontal" />
+        app:srcCompat="@drawable/sgtitlelogo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
