--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,18 +110,12 @@
         app:layout_constraintVertical_bias="0.038" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/socialgrubtitle"
         android:layout_width="260dp"
         android:layout_height="97dp"
         app:layout_constraintBottom_toTopOf="@+id/registerEnterName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backButton"
-        app:srcCompat="@drawable/socialgrublogohorizontal" /><![CDATA[
-
-    32dp"
-    tools:layout_editor_absoluteY="445dp" />32dp"
-    tools:layout_editor_absoluteY="458dp" />
-
-]]>
+        app:srcCompat="@drawable/sgtitlelogo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
