--- a/app/src/main/res/layout/activity_confirm_post.xml
+++ b/app/src/main/res/layout/activity_confirm_post.xml
@@ -6,103 +6,127 @@
     android:layout_height="match_parent"
     tools:context=".ConfirmPost">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="300dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical" >
+    <TextView
+        android:id="@+id/confirmPostTitleId"
+        android:layout_width="196dp"
+        android:layout_height="57dp"
+        android:text="Confirm Post"
+        android:textSize="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.043" />
+
+    <Button
+        android:id="@+id/cancelPostButtonId"
+        android:layout_width="94dp"
+        android:layout_height="44dp"
+        android:text="Cancel Post"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
+
+    <ImageView
+        android:id="@+id/imageInConfirmPostId"
+        android:layout_width="309dp"
+        android:layout_height="181dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.79"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <Button
+        android:id="@+id/backButtonId"
+        android:layout_width="94dp"
+        android:layout_height="44dp"
+        android:text="back"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.009"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
 
 
-            <TextView
-                android:id="@+id/pageTitle"
-                android:layout_width="match_parent"
-                android:layout_height="94dp"
-                android:text="Confirm Your Post" />
+    <TextView
+        android:id="@+id/postTitleId"
+        android:layout_width="312dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="cursive"
+        android:text="TextView"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageInConfirmPostId"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.997" />
 
-            <Button
-                android:id="@+id/cancelPostButton"
-                android:layout_width="235dp"
-                android:layout_height="wrap_content"
-                android:text="Cancel Post" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewIngredientId"
+        android:layout_width="393dp"
+        android:layout_height="141dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.157" />
 
-            <TextView
-                android:id="@+id/postTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDirectionsId"
+        android:layout_width="395dp"
+        android:layout_height="125dp"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/postTitleId"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-            <Button
-                android:id="@+id/changeTitleButton"
-                android:layout_width="232dp"
-                android:layout_height="wrap_content"
-                android:text="Change Title" />
+    <Button
+        android:id="@+id/uploadPostId"
+        android:layout_width="76dp"
+        android:layout_height="34dp"
+        android:text="Upload"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.983"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
 
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="329dp"
-                android:layout_height="258dp"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
+    <TextView
+        android:id="@+id/descriptionConfirmPageId"
+        android:layout_width="301dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="4dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageInConfirmPostId"
+        app:layout_constraintVertical_bias="0.714" />
 
-            <Button
-                android:id="@+id/changeImageButton"
-                android:layout_width="241dp"
-                android:layout_height="wrap_content"
-                android:text="Change Image" />
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="329dp"
-                android:layout_height="178dp"
-                android:text="TextView" />
-
-            <Button
-                android:id="@+id/changeDescriptionButton"
-                android:layout_width="242dp"
-                android:layout_height="wrap_content"
-                android:text="Change Description" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="334dp"
-                android:layout_height="177dp" />
-
-            <Button
-                android:id="@+id/changeIngredientsButton"
-                android:layout_width="258dp"
-                android:layout_height="wrap_content"
-                android:text="Change Ingredients" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="328dp"
-                android:layout_height="match_parent" />
-
-            <Button
-                android:id="@+id/changeDirectionsButton"
-                android:layout_width="256dp"
-                android:layout_height="wrap_content"
-                android:text="Change Directions" />
-
-            <com.google.android.material.chip.ChipGroup
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <Button
-                android:id="@+id/changeTagsButton"
-                android:layout_width="241dp"
-                android:layout_height="wrap_content"
-                android:text="Change Tags" />
-
-            <Button
-                android:id="@+id/uploadPostButton"
-                android:layout_width="259dp"
-                android:layout_height="wrap_content"
-                android:text="Post" />
-
-        </LinearLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
